Prevent overflow on calculator screen

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body{
 {
     font-size: xx-large;
     text-align: right;
+    overflow: scroll;
 
 }
 .span-2
